OPSMN-5633: Wrapped long cart names over multiple lines. This prevents limitless expansion of the cart dropdown menu and its associated nuisance.

--- a/www/app/styles/query.css
+++ b/www/app/styles/query.css
@@ -46,9 +46,17 @@
   border: 0px;
 }
 
+.os-query-folders-dd.dropdown-menu {
+  max-width: 400px;
+}
+
 .os-query-folders-dd > li > input { 
-  width: 260px;
+  width: calc(100% - 40px);
   margin: 3px 20px;
+}
+
+.os-query-folders-dd.dropdown-menu li a {
+  white-space: initial;
 }
 
 .os-query-folders-dd .dropdown-menu-subgroup {
